force-app/main/default/objects/Scheme_Applicability__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>Outlet Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>