force-app/main/default/objects/Scheme_Applicability__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Scheme Applicabilities</relationshipLabel>
    <relationshipName>Scheme_Applicabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>