force-app/main/default/objects/Scheme_Applicability__c/fields/Value_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Value_Lookup__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Value (Territory)</label>
    <referenceTo>Area__c</referenceTo>
    <relationshipLabel>Scheme Applicabilities</relationshipLabel>
    <relationshipName>Scheme_Applicabilities</relationshipName>
    <type>Lookup</type>
</CustomField>