force-app/main/default/objects/Scheme_Applicability__c/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName>
    <label>Value (Text)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>